# Sinai

./: .env.example  .gitignore  CLAUDE.md  Checklist.md  railway.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_03_11_0001_initial_schema.py
apps/api/migrations/: 001_initial_schema.sql  002_rls_policies.sql
apps/api/src/: main.py
apps/api/src/api/routes/: email_webhook.py  leads.py  messages.py  scheduling.py  sms.py
apps/api/src/core/: app.py  app_settings.py  config.py  db.py  logging.py  prompts.py  startup.py
apps/api/src/integrations/: calendar_client.py  openai_client.py  ringcentral_client.py  sendgrid_client.py  vector_store.py
apps/api/src/repositories/: audit_repository.py  lead_repository.py  message_repository.py  schedule_repository.py  summary_repository.py
apps/api/src/schemas/: lead.py  llm.py  message.py  models.py  scheduling.py
apps/api/src/services/: intake_service.py  orchestrator_service.py  reply_service.py  retrieval_service.py  scheduling_service.py  summary_service.py
apps/api/src/sinai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  test_email_webhook.py  test_inbound_flow.py  test_logging.py  test_orchestrator_service.py  test_reply_service.py  test_retrieval_service.py  test_scheduling_service.py  test_sms_webhook.py  test_summary_service.py
apps/web/: .env.local.example  next.config.js  (+3 more)
healthcare-ai-lead-agent/: CHANGELOG.md  README.md
knowledge/: README.md  sample-services.md
(+29 files in other folders)
