[project]
name = "sinai-api"
version = "0.1.0"
description = "Lead intake backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "openai>=1.0.0",
  "llama-index>=0.10.0",
  "pgvector>=0.2.0",
  "ringcentral>=0.7.0",
  "apscheduler>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
